interim commit -- cleanup and modify towards search
Enyo-DCO-1.1-Signed-off-by: Cole Davis <cole.davis@lge.com>

--- a/source/style/main.less
+++ b/source/style/main.less
@@ -7,3 +7,13 @@
 .main-view {
 	background-color: #eee;
 }
+
+.search-box {
+	padding: 10px;
+	.label {
+		vertical-align: bottom;
+	}
+	&> * {
+		display: inline-block;
+	}
+}
