--- a/source/style/main.less
+++ b/source/style/main.less
@@ -17,3 +17,19 @@
 		display: inline-block;
 	}
 }
+
+.album-row {
+	&> * {
+		display: inline-block;
+		padding: 2px;
+	}
+	.name {
+		width: 400px;
+	}
+	.year {
+		width: 90px;
+	}
+	.label {
+		width: 400px;
+	}
+}
