--- a/source/style/main.less
+++ b/source/style/main.less
@@ -70,7 +70,7 @@
 	}
 }
 
-.loader {
+.popup {
 	box-sizing: border-box;
 	width: 300px;
 	height: 100px;
@@ -84,7 +84,7 @@
 	h2 {
 		font-size: 30px;
 	}
-	&.loading {
+	&.showing {
 		top: 0;
 		-webkit-transition: top 100ms;
 	}
