--- a/source/style/main.less
+++ b/source/style/main.less
@@ -8,11 +8,16 @@
 	background-color: #eee;
 }
 
+.moon-input {
+	text-transform: none;
+}
+
+.moon-input-decorator {
+	padding: 20px;
+}
+
+
 .search-box {
-	padding: 10px;
-	input.moon-input {
-		text-transform: none;
-	}
 }
 
 .album-row {
@@ -70,22 +75,5 @@
 	}
 }
 
-.popup {
-	box-sizing: border-box;
-	width: 300px;
-	height: 100px;
-	position: absolute;
-	top: -200px;
-	left: 50%;
-	margin-left: -150px;
-	padding: 15px;
-	-webkit-transition: top 100ms;
-	text-align: center;
-	h2 {
-		font-size: 30px;
-	}
-	&.showing {
-		top: 0;
-		-webkit-transition: top 100ms;
-	}
+.dialog {
 }
