--- a/source/style/Theme.less
+++ b/source/style/Theme.less
@@ -1,14 +1,17 @@
 /* 
-    You can modify the Moonraker theme by adding variable and rule overrides to this
+    You can modify the Moonstone theme by adding variable and rule overrides to this
     file.  To enable theming, follow these steps:
 
-    1. In source/package.js, change "$lib/moonraker" to "$lib/moonraker/source".
-    2. In source/style/package.js, add "Theme.less" (this file).
+    1. In source/package.js, change "$lib/moonstone" to "$lib/moonstone/source".
+    2. In source/style/package.js, uncomment "Theme.less" line.
     3. Add variable and rule overrides below.
 
     See [https://github.com/enyojs/enyo/wiki/UI-Theming] for more information.
 */
 
+/* Moonstone theme variable definitions: */
+@import "../../lib/moonstone/css/moonstone-variables-light.less";
+/* @import "../../lib/moonstone/css/moonstone-variables-dark.less"; */
 
 /* Moonstone default variable definitions: */
 @import "../../lib/moonstone/css/moonstone-variables.less";
